[package]
name = "wolfenstien"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-loop = { version = "0.10.2", features = [ "winit" ] }
log = "0.4.17"
pixels = "0.11.0"
png = "0.17.7"
pretty_env_logger = "0.4.0"
winit = "0.28.2"
winit_input_helper = "0.14.0"
